fix iphone modal overflow. closes #77

--- a/less/app-map.less
+++ b/less/app-map.less
@@ -283,6 +283,11 @@ nav {
     -webkit-box-shadow: 0;
     -moz-box-shadow: 0;
     box-shadow: 0;
+    z-index: 2005;
+}
+
+.modal-backdrop {
+    z-index: 2004;
 }
 
 .modal-body {
@@ -299,6 +304,7 @@ nav {
     h3 {
         color: #111;
         font-size: 14px;
+        line-height: 1.2;
         font-weight: bold;
     }
     .close {
